--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <shared-search-box placeHolder="Buscar por capital" (onValue)="busquedaPorCapital($event)"></shared-search-box>
+    <shared-search-box placeHolder="Buscar por capital" (onValue)="busquedaPorCapital($event)" [value]="valueInput"></shared-search-box>
   </div>
 </div>
 
