--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,2 +1,2 @@
 <!--(keyup.enter)="emitirValor(txtInput.value)"-->
-<input type="text" [placeholder]="placeHolder" class="form-control" (keyup)="onKeyPress(txtInput.value)" #txtInput>
+<input type="text" [placeholder]="placeHolder" class="form-control" (keyup)="onKeyPress(txtInput.value)" [value]="value" #txtInput>
